fix scroll overflow-y in code block with linenos

--- a/_sass/_classes.scss
+++ b/_sass/_classes.scss
@@ -96,3 +96,8 @@
     overflow: auto;
     padding: 0.75em 0.5em;
 }
+
+
+.highlight.flexitem {
+    overflow-y: hidden;
+}
